# firstgraphics

./: CMakeLists.txt  main.cpp
glad/src/: glad.c
shaders/: shader.fs
src/: glad.c  glad.h  main.cpp  shader.h  stb_image.h
src/glm/detail/: func_common.inl  func_common_simd.inl
src/glm/gtc/: matrix_transform.inl  ulp.inl
src/glm/gtx/: matrix_decompose.inl  vector_angle.inl
src/glm/simd/: common.h
